<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Ueberliste</string>
    <string name="action_settings">Settings</string>
    <string name="measurement_text">Measurement</string>
    <string name="measurement_error_message">There is an error getting the data: \n</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="history_title">History</string>
    <string name="addproduct_guide">Type to add a new item</string>
    <string name="editlist_button">Edit list</string>
    <string name="login_emailhint">E-Mail</string>
    <string name="login_passwordhint">Password</string>
    <string name="login_loginhint">Login</string>
    <string name="login_registration">Registration</string>
    <string name="login_forgotpassword">Forgot password?</string>
    <string name="login_facebooktext">Login with Facebook</string>
    <string name="login_closeloginpage">close login page</string>
    <string name="login_logo">logo</string>
    <string name="login_facebooklogo">facebooklogo</string>
    <string name="app_addproducticon">add product</string>
    <string name="main_message">Well done!</string>
    <string name="nav_header_title">LISTS VIEW</string>
    <string name="nav_header_addlist">add new list</string>
    <string name="measurement_okbutton">OK</string>
    <string name="editlist_close">close edit list</string>
    <string name="registration_registerhint">Register</string>
    <string name="registration_closeregisterpage">close register page</string>
    <string name="all_cancel">Cancel</string>
    <string name="registration_resethint">Reset Password</string>
    <string name="createlist_button">Create list</string>


</resources>
