<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    tools:context=".ui.Authentication.LoginActivity">

    <ImageView
        android:id="@+id/imageview_login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_closeloginpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/close" />

    <ImageView
        android:id="@+id/imageview_login_logo"
        android:layout_width="273dp"
        android:layout_height="139dp"
        android:contentDescription="@string/login_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/logo_1" />

    <EditText
        android:id="@+id/edittext_login_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/login_inputs"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/login_emailhint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/edittext_login_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/login_inputs"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/login_passwordhint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.450" />

    <TextView
        android:id="@+id/textview_login_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/login_button"
        android:ems="14"
        android:gravity="center"
        android:text="@string/login_loginhint"
        android:textColor="@color/BackgroundColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textview_login_registration"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/login_registration"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_login_forgotpassword"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_login_button"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textview_login_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/login_forgotpassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_login_registration"
        app:layout_constraintTop_toBottomOf="@id/textview_login_button"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textview_login_facebooktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/facebook"
        android:drawableLeft="@drawable/facebook"
        android:gravity="center"
        android:text="@string/login_facebooktext"
        android:textColor="@color/colorFB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

</androidx.constraintlayout.widget.ConstraintLayout>